--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "test": "karma start test/karma.conf.js"
   },
   "dependencies": {
+    "coffee-script": "^1.10.0",
     "express": "^4.14.0",
     "gzippo": "^0.2.0",
     "morgan": "^1.7.0"
